--- a/Template/Index.htm
+++ b/Template/Index.htm
@@ -64,7 +64,9 @@
                         var shortURL = "{BASE_URL}" + result.data.alias;
                         $("#shortUrl").show().html(result.message + '<br/>短址为：<a href="'+ shortURL + '" target="_blank">'+shortURL+'</a>');
                     } else {
-                        alert("转换失败,错误代码：" + result.message);
+                        var shortURL = "{BASE_URL}" + result.data.alias;
+                        $("#shortUrl").show().html(result.message + '<br/>短址为：<a href="'+ shortURL + '" target="_blank">'+shortURL+'</a>');
+                        alert("转换失败,错误代码：" + result.data.message);
                     }
                 },
                 error: function(result){
